=head1 Krang Changelog

This document contains a list of changes for each release of Krang.

=head2 v1.101 - In Development

=over

=item *

Cleaned up how C<KRANG_PERSIST> variables are stored in the session
cache for remembering search preferences.  The cleanup also fixed a
number of bugs - the C<Clear> buttons on the advanced-search pages now
work again, category searches are now done on a per-type basis
(e.g. separate Story/Media/Template category-search prefs), and search
terms are remembered properly. [Peter]

=item *

Fixed a bug in L<Krang::CGI::ElementEditor> - the new "save always
reorders" functionality that is part of 1.100 was breaking bulk-edit,
where reordering never happens.  This now works properly.  [Peter]


=item *

Added error-handling for Stories that return a zero-length string when
previewed/published.  [Peter]


=item *

Upgraded L<Imager> to 0.44 from 0.43, which fixes a bug involving
thumbnailing of extreme-aspect-ratio images. [Peter]

=item *

Fixed error message trapping in C<bin/krang_install> to get Krang to
play nicer with MySQL 4.1.x [Peter]

=item *

C<bin/krang_install> and C<bin/krang_createdb> now handle the C<@localhost>
in the MySQL user creation consistently. [Perrin]

=item *

C<bin/krang_ctl> no longer uses sudo for starting things on unprivileged
ports. [Perrin]

=item *

Upgraded L<Scalar-List-Utils> to 1.14 from 1.09 - this should fix some
compilation issues with MacOSX. [Peter]

=back

=head2 v1.100 - January 4, 2005

=over

=item *

C<About Krang> now reports server IP address, Addons are now
alphabetized properly. [Peter]

=item *

Added server IP address, along with instance-by-instance breakdowns to
C<bin/krang_info> [Peter].

=item *

Fixed a bug in L<Krang::Story>->_load_version() - the restored version
of the story still held outdated checkout and publish settings.  The
restored version now returns default values for those parameters
(e.g. not checked out, not published).  Note that this does not affect